--- a/Redes1/slides/introduction.css
+++ b/Redes1/slides/introduction.css
@@ -47,7 +47,18 @@
   display: block;
   font-size: 14px;
 }
-
+.table-left {
+  float: left;
+  display: block;
+}
+.table-right { 
+  float: right;
+  display: block;
+}
+td {
+  text-align: center;
+  border: 1px solid black !important;
+}
 @media print {
   .theme-menu {
     display: none !important;
